--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="eng">
   <head>
+    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emily Stewart Portfolio</title>
-
-    <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
-
   <body>
+      <!--Navigation-->
     <header>
+        <div>
         <h1> Welcome To Emily's Workshop!</h1>
-    </header>
+        </div>
 
-      </section>
-      </section>
+        <nav>
+        <!--Unordered list-->
+            <ul>
+                <li>
+                    <a href= "#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href= "#my-work">My Work</a>
+                </li>
+                <li>
+                 <a href= "#contact-me">Contact Me</a>
+                </li>
+                <li>
+                    <a href= "#my-resume">My Resume</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        
+    </section>
     </div>
   </body>
 </html>
