added about me section

--- a/index.html
+++ b/index.html
@@ -31,8 +31,19 @@
             </ul>
         </nav>
     </header>
-    <section>
-        
+    <section id="about-me" class="about-me-title">
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">
+                About Me
+            </h2>
+        </div>
+
+        <div class="info">
+            <p>
+                My name is Emily M. Stewart, I am 24 years old and currently live in Tucson, AZ. I was born in California and raised in Alabama for a majority of my life. I joined the United States Airforce as a Weapons Load Crew member after I turned 18, I have now been enlisted for 6 years but do not plan on making it a career. I have traveled to over 15 states and 4 different countries, got stationed in South Korea and now Arizona. I am currently studying for my associates in Video Game Simulation and Design with a concentration of programming but I hope to transfer my credits over and persue my Bachelors in Computer Science.
+                Some hobbies of mine include drawing/creating concept art and comics, working out, swimming, and playing video games. I am a huge fan of Science fiction, Fantasy, Superhero, and Horror genres, essentially anything that can get my brain wondering I tend to gravitate towards that.
+            </p>
+        </div>
     </section>
     </div>
   </body>
