--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </ul>
         </nav>
     </header>
-    <section id="about-me" class="about-me-title">
+    <section id="about-me" class="about">
         <div class="flex-row">
             <h2 class="section-title secondary-border">
                 About Me
@@ -40,11 +40,72 @@
 
         <div class="info">
             <p>
-                My name is Emily M. Stewart, I am 24 years old and currently live in Tucson, AZ. I was born in California and raised in Alabama for a majority of my life. I joined the United States Airforce as a Weapons Load Crew member after I turned 18, I have now been enlisted for 6 years but do not plan on making it a career. I have traveled to over 15 states and 4 different countries, got stationed in South Korea and now Arizona. I am currently studying for my associates in Video Game Simulation and Design with a concentration of programming but I hope to transfer my credits over and persue my Bachelors in Computer Science.
+                My name is Emily M. Stewart, I am 24 years old and currently live in Tucson, AZ. I was born in California and raised in Alabama for a majority of my life. I was raised in a very diverse family and growing family, now consiting of 5 siblings along with my dad and step-mom. I joined the United States Airforce as a Weapons Load Crew member after I turned 18, I have now been enlisted for 6 years but do not plan on making it a career. I have traveled to over 15 states and 4 different countries, got stationed in South Korea and now Arizona. I am currently studying for my associates in Video Game Simulation and Design with a concentration of programming but I hope to transfer my credits over and persue my Bachelors in Computer Science.
                 Some hobbies of mine include drawing/creating concept art and comics, working out, swimming, and playing video games. I am a huge fan of Science fiction, Fantasy, Superhero, and Horror genres, essentially anything that can get my brain wondering I tend to gravitate towards that.
             </p>
         </div>
     </section>
-    </div>
+
+    <section id="my-work" class="work">
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">
+                My Work
+            </h2>
+        </div>
+
+        <div class="projects">
+            <div class="flex-row">
+                <div>
+                    <a href="/">Artwork</a>
+                </div>
+            
+                <div>
+                    <a href="/">JavaScript</a>
+                </div>
+                <div>
+                    <a href="/">Run Buddy</a>
+                </div>
+                <div>
+                    <a href="/">Games</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact-me" class="contact">
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">
+                How to Contact Me!
+            </h2>
+        </div>
+        <div class="contact-info">
+            <div>
+                <p>
+                    If you would like to reach me, here are some contact points!
+                </p>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://twitter.com/_queenblackshee?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @TwitterDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </li>
+                    <li>
+                        <!-- Add icon library -->
+                        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+                        <!-- Add font awesome icons -->
+                        <a href="https://www.instagram.com/_queenblacksheep_/" class="fa fa-instagram"></a>
+                    </li>
+                    <li>
+                        <a href="/">Email</a>
+                    </li>
+                    <li>
+                        Phone: ###-####
+                    </li>
+                </ul>
+            </nav>
+            </div>
+        </div>
+    </section>
   </body>
 </html>
