--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <link rel="stylesheet" type="text/css" href="./assets/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+        <style>
+            body {
+                font-family: "Audiowide", sans-serif;
+                text-shadow: 3px 3px 3px #0a001a ;
+                }
+        </style>
     <title>Emily Stewart Portfolio</title>
+    
   </head>
+
   <body>
       <!--Navigation-->
     <header>
@@ -33,39 +43,44 @@
     </header>
     <section id="about-me" class="about">
         <div class="flex-row">
-            <h2 class="section-title secondary-border">
+            <h2 class="font-effect-neon">
                 About Me
             </h2>
         </div>
+        <article class="selfie">
+            <img src="./assets/images/Selfie.jpeg" alt="Emily staring expressionless at camera" />
 
-        <div class="info">
-            <p>
-                My name is Emily M. Stewart, I am 24 years old and currently live in Tucson, AZ. I was born in California and raised in Alabama for a majority of my life. I was raised in a very diverse family and growing family, now consiting of 5 siblings along with my dad and step-mom. I joined the United States Airforce as a Weapons Load Crew member after I turned 18, I have now been enlisted for 6 years but do not plan on making it a career. I have traveled to over 15 states and 4 different countries, got stationed in South Korea and now Arizona. I am currently studying for my associates in Video Game Simulation and Design with a concentration of programming but I hope to transfer my credits over and persue my Bachelors in Computer Science.
-                Some hobbies of mine include drawing/creating concept art and comics, working out, swimming, and playing video games. I am a huge fan of Science fiction, Fantasy, Superhero, and Horror genres, essentially anything that can get my brain wondering I tend to gravitate towards that.
-            </p>
-        </div>
+            <div class="info">
+                <p>
+                    My name is Emily M. Stewart, I am 24 years old and currently live in Tucson, AZ. I was born in California and raised in Alabama for a majority of my life. I was raised in a very diverse family and growing family, now consiting of 5 siblings along with my dad and step-mom. 
+                    I joined the United States Airforce as a Weapons Load Crew member after I turned 18, I have now been enlisted for 6 years but do not plan on making it a career. I have traveled to over 15 states and 4 different countries, got stationed in South Korea and now Arizona. 
+                    I am currently studying for my associates in Video Game Simulation and Design with a concentration of programming but I hope to transfer my credits over and persue my Bachelors in Computer Science.Some hobbies of mine include drawing/creating concept art and comics, working out, swimming, and playing video games. 
+                    I am a huge fan of Science fiction, Fantasy, Superhero, and Horror genres, essentially anything that can get my brain wondering I tend to gravitate towards that.
+                </p>
+            </div>
+        </article>
     </section>
 
     <section id="my-work" class="work">
         <div class="flex-row">
-            <h2 class="section-title secondary-border">
+            <h2 class="font-effect-neon">
                 My Work
             </h2>
         </div>
 
         <div class="projects">
             <div class="flex-row">
-                <div>
-                    <a href="/">Artwork</a>
+                <div class="art">
+                    <a href="https://www.deviantart.com/konan-akatsuki-xxx">Artwork</a>
                 </div>
             
-                <div>
+                <div class="js">
                     <a href="/">JavaScript</a>
                 </div>
-                <div>
+                <div class="run-buddy">
                     <a href="/">Run Buddy</a>
                 </div>
-                <div>
+                <div class="game">
                     <a href="/">Games</a>
                 </div>
             </div>
@@ -74,8 +89,8 @@
 
     <section id="contact-me" class="contact">
         <div class="flex-row">
-            <h2 class="section-title secondary-border">
-                How to Contact Me!
+            <h2 class="font-effect-neon">
+                How to Contact Me
             </h2>
         </div>
         <div class="contact-info">
@@ -87,7 +102,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="https://twitter.com/_queenblackshee?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @TwitterDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <a href="https://twitter.com/_queenblackshee?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @_queenblackshee</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </li>
                     <li>
                         <!-- Add icon library -->
