corrected image size/placement

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </h2>
         </div>
         <article class="selfie">
-            <img src="./assets/images/Selfie.jpeg" alt="Emily staring expressionless at camera" />
+            <img class="Me" src="./assets/images/Selfie.jpeg" style="width:100%" />
 
             <div class="info">
                 <p>
