fixed contact icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <style>
             body {
                 font-family: "Audiowide", sans-serif;
@@ -49,6 +50,7 @@
         </div>
         <article class="selfie">
             <img class="Me" src="./assets/images/Selfie.jpeg" style="width:100%" />
+        </article>
 
             <div class="info">
                 <p>
@@ -58,7 +60,6 @@
                     I am a huge fan of Science fiction, Fantasy, Superhero, and Horror genres, essentially anything that can get my brain wondering I tend to gravitate towards that.
                 </p>
             </div>
-        </article>
     </section>
 
     <section id="my-work" class="work">
@@ -95,10 +96,12 @@
         </div>
         <div class="contact-info">
             <div>
-                <p>
-                    If you would like to reach me, here are some contact points!
-                </p>
-            </div>
+                <br>
+                    <p>
+                        If you would like to reach me, here are some contact points!
+                    </p>
+                </br>
+           
             <nav>
                 <ul>
                     <li>
@@ -112,15 +115,18 @@
                         <a href="https://www.instagram.com/_queenblacksheep_/" class="fa fa-instagram"></a>
                     </li>
                     <li>
-                        <a href="/">Email</a>
+                        <a href="mailto:stewartemilym2014@gmail.com"> <i class="material-icons">computer</i></a>
                     </li>
                     <li>
-                        Phone: ###-####
+                        Cell: (334)782-0025
                     </li>
                 </ul>
             </nav>
             </div>
         </div>
     </section>
+    <footer>
+
+    </footer>
   </body>
 </html>
