added resume, added media queries

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 border: 2px solid #ddd; /* Gray border */
                 border-radius: 4px;  /* Rounded border */
                 padding: 5px; /* Some padding */
-                width: 300px; /* Set a small width */
+                width: 280px; /* Set a small width */
                 display:flex;
                 flex-direction: column;
-                align-items: baseline;
+                align-items: center;
                 }
                 /* Add a hover effect (blue shadow) */
             .projects img:hover {
@@ -50,7 +50,7 @@
                  <a href= "#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href= "#my-resume">My Resume</a>
+                    <a href= "https://www.linkedin.com/in/emily-stewart-40b476204/">My Resume</a>
                 </li>
             </ul>
         </nav>
@@ -88,28 +88,19 @@
                 <div class="art">
                     <h4>Artwork</h4>
                         <a target="_blank" href="https://www.instagram.com/_queenblacksheep_/">
-                            <img src="assets/images/thumbnail1.jpg" alt="Art id">
+                            <img src="assets/images/thumbnail1.jpg" class="img-fluid">
                         </a>
                 </div>
-                <br>
                 <div class="js">
                     <h4>Javascript</h4>
                         <a target="_blank" href="https://github.com/EmiStew14/robot-gladiators">
-                            <img src="assets/images/thumbnail2.jpg" alt="Javascript thumbnail">
+                            <img src="assets/images/thumbnail2.jpg" class="img-fluid">
                         </a>
                 </div>
-                <br>
                 <div class="run-buddy">
                     <h4>Run Buddy</h4>
                         <a target="_blank" href="https://github.com/EmiStew14/run-buddy">
-                            <img src="assets/images/thumbnail4.jpg" alt="Run thumbnail">
-                        </a>
-                </div>
-                <br>
-                <div class="game">
-                    <h4>Games</h4>
-                        <a target="_blank" href="/">
-                            <img src="assets/images/thumbnail3.jpg" alt="TBA thumbnail">
+                            <img src="assets/images/thumbnail4.jpg" class="img-fluid">
                         </a>
                 </div>
             </div>
