aligned contact area centered

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
   <body class="text-light">
       <!--Navigation-->
-    <header>
-        <div>
-        <h1> Welcome To Emily's Workshop!</h1>
+    <header class="row">
+        <div class="col-auto">
+        <h1 class="text-center"> Welcome To Emily's Workshop!</h1>
         </div>
 
         <nav>
@@ -101,7 +101,7 @@
             </div>
     </section>
 
-    <section id="contact-me" class="contact row">
+    <section id="contact-me" class="contact row align-items-center">
         <div class="col-auto">
             <h2 class="font-effect-neon col-auto text-center">
                 Contact Me
@@ -112,19 +112,21 @@
                         If you would like to reach me, here are some contact points!
                     </p>
         </div>
-        <div class="row align-content-center"> 
-                   <div class="col-3">
+        <div class="row"> 
+            <div class="col-auto">
+                   <div class="col-12 text-center">
                         <a href="https://twitter.com/_queenblackshee?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @_queenblackshee</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
-                   <div class="col-3">
+                   <div class="col-12 text-center">
                         <a href="https://www.instagram.com/ehmurlee96/" class="fa fa-instagram"></a>
                     </div>
-                   <div class="col-3">
+                   <div class="col-12 text-center">
                         <a href="mailto:stewartemilym2014@gmail.com"> <i class="material-icons">computer</i></a>
                     </div>
-                   <div class="col-3">
+                   <div class="col-12 text-center">
                         Cell: (334)782-0025
                    </div>
+            </div>
         </div>
     </section>
     <footer>
