added experience buttons

--- a/index.html
+++ b/index.html
@@ -42,22 +42,42 @@
             </ul>
         </nav>
     </header>
-    <section id="about-me" class="about">
-        <div class="flex-row">
-            <h2 class="font-effect-neon col-auto text-center">
+    <section id="about-me" class="about row">
+        <div class="col-auto">
+            <h2 class="font-effect-neon text-center">
                 About Me
             </h2>
         </div>
-            <img id="Me" class="img-thumbnail h-25 w-25" src="./assets/images/Selfie.jpeg" style="width:100%" />
+        <div id="info" class="row">
+            <div class="col-auto text-center">
+            <img id="Me" class="img-thumbnail img-fluid h-75 w-50 rounded mx-auto d-block" src="./assets/images/Selfie.jpeg" style="width:100%" />
+            <div class="row">
+             <div class="col-12">
+                <h4 class="text-center"> Areas of Experience:</h4>
+             </div>
+            </div>
 
-            <div id="info" class="flex-row mb-0">
-                <p class="col-auto">
+             <div class="flex-wrap col-auto text-center">
+            <button id="btn" class="font-effect-neon">HTML</button>
+            <button id="btn" class="font-effect-neon">CSS</button>
+            <button id="btn" class="font-effect-neon">Bootstrap</button>
+            <button id="btn" class="font-effect-neon">JavaScript</button>
+            <button id="btn" class="font-effect-neon">Procreate</button>
+            <button id="btn" class="font-effect-neon">ClipStudio</button>
+            </div>
+            </div>
+
+            <div class="row align-items-center">
+                <div class="col-12">
+                <p class="col-12 text-bold">
                     My name is Emily M. Stewart, I am 24 years old and currently live in Tucson, AZ. I was born in California and raised in Alabama for a majority of my life. I was raised in a very diverse family and growing family, now consiting of 5 siblings along with my dad and step-mom. 
                     I joined the United States Airforce as a Weapons Load Crew member after I turned 18, I have now been enlisted for 6 years but do not plan on making it a career. I have traveled to over 15 states and 4 different countries, got stationed in South Korea and now Arizona. 
                     I am currently studying for my associates in Video Game Simulation and Design with a concentration of programming but I hope to transfer my credits over and persue my Bachelors in Computer Science.Some hobbies of mine include drawing/creating concept art and comics, working out, swimming, and playing video games. 
                     I am a huge fan of Science fiction, Fantasy, Superhero, and Horror genres, essentially anything that can get my brain wondering I tend to gravitate towards that.
                 </p>
+                </div>
             </div>
+        </div>
     </section>
 
     <section id="my-work" class="work row">
@@ -76,8 +96,7 @@
                         <h5 class="mt-0 mb-1">Artwork</h5>
                       </div>
                     </div>
-        </div>
-        <div class="row align-items-start">
+
                     <div class="media col-auto mx-auto">
                         <a target="_blank" href="https://github.com/EmiStew14/Planetarium-Party">
                             <img src="assets/images/OIP.jfif" class="img-thumbnail">
@@ -88,7 +107,7 @@
                     </div>
                     </div>
         </div>
-        <div class="row align-items-start">
+        <div class="row">
                     <div class="media col-auto mx-auto">
                         <a target="_blank" href="https://github.com/EmiStew14/run-buddy">
                             <img src="assets/images/thumbnail5.jpg" class="img-thumbnail">
@@ -121,7 +140,7 @@
                         <a href="https://www.instagram.com/ehmurlee96/" class="fa fa-instagram"></a>
                     </div>
                    <div class="col-12 text-center">
-                        <a href="mailto:stewartemilym2014@gmail.com"> <i class="material-icons">computer</i></a>
+                        <a href="mailto:stewartemilym2014@gmail.com"> <i class="material-icons align-content-center">computer</i></a>
                     </div>
                    <div class="col-12 text-center">
                         Cell: (334)782-0025
