aligned items to be more mobile friendly

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body class="text-light">
       <!--Navigation-->
-    <header class="row">
+    <header class="row justify-content-center">
         <div class="col-auto">
         <h1 class="text-center"> Welcome To Emily's Workshop!</h1>
         </div>
@@ -48,8 +48,8 @@
                 About Me
             </h2>
         </div>
-        <div id="info" class="row">
-            <div class="col-auto text-center">
+        <div id="info" class="row justify-content-center">
+            <div class="col-auto">
             <img id="Me" class="img-thumbnail img-fluid h-75 w-50 rounded mx-auto d-block" src="./assets/images/Selfie.jpeg" style="width:100%" />
             <div class="row">
              <div class="col-12">
@@ -67,9 +67,9 @@
             </div>
             </div>
 
-            <div class="row align-items-center">
-                <div class="col-12">
-                <p class="col-12 text-bold">
+            <div class="row justify-content-center">
+                <div class="col-9 p-3">
+                <p class="text-bold">
                     My name is Emily M. Stewart, I am 24 years old and currently live in Tucson, AZ. I was born in California and raised in Alabama for a majority of my life. I was raised in a very diverse family and growing family, now consiting of 5 siblings along with my dad and step-mom. 
                     I joined the United States Airforce as a Weapons Load Crew member after I turned 18, I have now been enlisted for 6 years but do not plan on making it a career. I have traveled to over 15 states and 4 different countries, got stationed in South Korea and now Arizona. 
                     I am currently studying for my associates in Video Game Simulation and Design with a concentration of programming but I hope to transfer my credits over and persue my Bachelors in Computer Science.Some hobbies of mine include drawing/creating concept art and comics, working out, swimming, and playing video games. 
@@ -87,7 +87,7 @@
             </h2>
         </div>
 
-        <div class="projects row align-items-start">
+        <div class="projects row justify-content-center">
                     <div class="media col-auto mx-auto">
                         <a target="_blank" href="https://www.instagram.com/_queenblacksheep_/">
                             <img src="assets/images/thumbnail1.jpg" class="img-thumbnail">
@@ -98,7 +98,7 @@
                     </div>
 
                     <div class="media col-auto mx-auto">
-                        <a target="_blank" href="https://github.com/EmiStew14/Planetarium-Party">
+                        <a target="_blank" href=" https://emistew14.github.io/Planetarium-Party/">
                             <img src="assets/images/OIP.jfif" class="img-thumbnail">
                         </a>
                     <div class="media-body col-auto mx-auto">
@@ -109,7 +109,7 @@
         </div>
         <div class="row">
                     <div class="media col-auto mx-auto">
-                        <a target="_blank" href="https://github.com/EmiStew14/run-buddy">
+                        <a target="_blank" href=" https://emistew14.github.io/run-buddy/">
                             <img src="assets/images/thumbnail5.jpg" class="img-thumbnail">
                         </a>
                       <div class="media-body col-auto mx-auto">
@@ -145,13 +145,15 @@
                    <div class="col-12 text-center">
                         Cell: (334)782-0025
                    </div>
+                   <div class="col-12 text-center">
+                    <a href="https://github.com/EmiStew14"><i class="fa fa-github" aria-hidden="true"></i></a>
+                </div>
             </div>
         </div>
     </section>
     <footer>
         <p>
             &#127756; Thank you for visiting! More to come soon! &#127756;
-            <a href="https://github.com/EmiStew14"><i class="fa fa-github" aria-hidden="true"></i></a>
         </p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
