--- a/index.html
+++ b/index.html
@@ -50,25 +50,25 @@
         </div>
         <div id="info" class="row justify-content-center">
             <div class="col-auto">
-            <img id="Me" class="img-thumbnail img-fluid h-75 w-50 rounded mx-auto d-block" src="./assets/images/Selfie.jpeg" style="width:100%" />
+            <img id="Me" class="img-thumbnail img-fluid h-75 w-50 rounded mx-auto d-block" src="/assets/images/Selfie2.jpg" style="width:100%" />
             <div class="row">
              <div class="col-12">
-                <h4 class="text-center"> Areas of Experience:</h4>
+                <h4 class="text-center p-3"> Areas of Experience:</h4>
              </div>
             </div>
 
              <div class="flex-wrap col-auto text-center">
-            <button id="btn" class="font-effect-neon">HTML</button>
-            <button id="btn" class="font-effect-neon">CSS</button>
-            <button id="btn" class="font-effect-neon">Bootstrap</button>
-            <button id="btn" class="font-effect-neon">JavaScript</button>
-            <button id="btn" class="font-effect-neon">Procreate</button>
-            <button id="btn" class="font-effect-neon">ClipStudio</button>
+            <button id="btn-1" class="font-effect-neon rounded"data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">HTML</button>
+            <button id="btn-2" class="font-effect-neon rounded"data-toggle="popover" data-placement="bottom" data-content="Beginner (less than a year)">CSS</button>
+            <button id="btn-3" class="font-effect-neon rounded"data-toggle="popover" data-placement="left" data-content="Beginner (less than a year)">Bootstrap</button>
+            <button id="btn-4" class="font-effect-neon rounded"data-toggle="popover" data-placement="right" data-content="Beginner (less than a year)">JavaScript</button>
+            <button id="btn-5" class="font-effect-neon rounded"data-toggle="popover" data-placement="bottom" data-content="Beginner (less than a year)">Procreate</button>
+            <button id="btn-6" class="font-effect-neon rounded"data-toggle="popover" data-placement="top" data-content="Beginner (1.5 years)">ClipStudio</button>
             </div>
             </div>
 
             <div class="row justify-content-center">
-                <div class="col-9 p-3">
+                <div class="col-9 p-1">
                 <p class="text-bold">
                     My name is Emily M. Stewart, I am 24 years old and currently live in Tucson, AZ. I was born in California and raised in Alabama for a majority of my life. I was raised in a very diverse family and growing family, now consiting of 5 siblings along with my dad and step-mom. 
                     I joined the United States Airforce as a Weapons Load Crew member after I turned 18, I have now been enlisted for 6 years but do not plan on making it a career. I have traveled to over 15 states and 4 different countries, got stationed in South Korea and now Arizona. 
@@ -80,7 +80,7 @@
         </div>
     </section>
 
-    <section id="my-work" class="work row">
+    <section id="my-work" class="work row p-3">
         <div class="col-auto">
             <h2 class="font-effect-neon text-center">
                 My Work
@@ -90,7 +90,7 @@
         <div class="projects row justify-content-center">
                     <div class="media col-auto mx-auto">
                         <a target="_blank" href="https://www.instagram.com/_queenblacksheep_/">
-                            <img src="assets/images/thumbnail1.jpg" class="img-thumbnail">
+                            <img src="assets/images/thumbnail1.jpg" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="Go directly to my art Insta page">
                         </a>
                       <div class="media-body col-auto mx-auto">
                         <h5 class="mt-0 mb-1">Artwork</h5>
@@ -99,22 +99,20 @@
 
                     <div class="media col-auto mx-auto">
                         <a target="_blank" href=" https://emistew14.github.io/Planetarium-Party/">
-                            <img src="assets/images/OIP.jfif" class="img-thumbnail">
+                            <img src="assets/images/OIP.jfif" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="My collaborative project with APIs">
                         </a>
                     <div class="media-body col-auto mx-auto">
                     <h5 class="mt-0 mb-1">Planetarium Party</h5>
-                        <p>Click to see a collaborative project using third party API's!</p>
                     </div>
                     </div>
         </div>
         <div class="row">
                     <div class="media col-auto mx-auto">
                         <a target="_blank" href=" https://emistew14.github.io/run-buddy/">
-                            <img src="assets/images/thumbnail5.jpg" class="img-thumbnail">
+                            <img src="assets/images/thumbnail5.jpg" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="A sample fitness page">
                         </a>
                       <div class="media-body col-auto mx-auto">
                         <h5 class="mt-0 mb-1">Run Buddy</h5>
-                      Click to see a sample workout site
                       </div>
                     </div>
             </div>
