--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div id="info" class="row justify-content-center p-3">
             <div class="col-auto">
-            <img id="Me" class="img-thumbnail img-fluid h-75 w-50 rounded mx-auto d-block" src="/assets/images/Selfie2.jpg" style="width:100%" />
+            <img id="Me" class="img-thumbnail img-fluid h-75 w-50 rounded mx-auto d-block" src="assets/images/Selfie2.jpg" style="width:100%" />
             <div class="row">
              <div class="col-12">
                 <h4 class="text-center p-3"> Areas of Experience:</h4>
