fixed icon alignment

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <a href="https://www.instagram.com/ehmurlee96/" class="fa fa-instagram"></a>
                     </div>
                    <div class="col-12 text-center">
-                        <a href="mailto:stewartemilym2014@gmail.com"> <i class="material-icons align-content-center">computer</i></a>
+                        <a href="mailto:stewartemilym2014@gmail.com"> <i class="material-icons">computer</i></a>
                     </div>
                    <div class="col-12 text-center">
                         Cell: (334)782-0025
