--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer class="justify-content-center">
         <p>
             &#127756; Thank you for visiting! More to come soon! &#127756;
         </p>
